--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@primevue/themes": "^4.3.9",
     "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
