--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,8 +36,8 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
+    "happy-dom": "^20.6.1",
     "jiti": "^2.4.2",
-    "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
